--- a/src/components/Layouts/DefaultLayout/style.module.scss
+++ b/src/components/Layouts/DefaultLayout/style.module.scss
@@ -7,7 +7,7 @@
   color: var(--color-white);
 
   .container {
-    margin-top: 70px;
+    margin: 70px 0 160px;
     padding: 40px 16px;
     min-height: calc(100vh - 70px);
   }
