--- a/src/components/Navigations/BottomFooter/style.module.scss
+++ b/src/components/Navigations/BottomFooter/style.module.scss
@@ -1,41 +1,46 @@
 .footer {
   width: 100%;
-  height: 300px;
-  padding: 24px 0 40px;
+  height: 100%;
+  padding: 64px 0 40px;
 
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   background-color: var(--color-black);
 
   .logo {
-    font-size: 24px;
     margin-left: 24px;
   }
 
-  .menu {
+  .footerContent {
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    margin-right: 24px;
+    gap: 80px;
 
-    .menuItem {
-      color: var(--color-white);
-      font-weight: bold;
-      text-decoration: none;
-      cursor: pointer;
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      margin-right: 80px;
 
-      &:hover {
-        color: var(--color-primary);
+      .menuItem {
+        color: var(--color-white);
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
+
+        &:hover {
+          color: var(--color-tertiary);
+        }
       }
     }
-  }
 
-  .copyright {
-    display: flex;
-    height: 100%;
-    align-items: flex-end;
-    font-size: 12px;
-    margin-right: 24px;
+    .copyright {
+      display: flex;
+      height: 100%;
+      align-items: flex-end;
+      font-size: 12px;
+      margin-right: 24px;
+    }
   }
 }
