--- a/src/components/Navigations/FixedHeader/style.module.scss
+++ b/src/components/Navigations/FixedHeader/style.module.scss
@@ -28,7 +28,7 @@
       cursor: pointer;
 
       &:hover {
-        color: var(--color-primary);
+        color: var(--color-tertiary);
       }
     }
 
