--- a/src/components/Navigations/FixedHeader/style.module.scss
+++ b/src/components/Navigations/FixedHeader/style.module.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-black);
+  box-shadow: 0px 15px 10px -15px var(--color-grayDark);
 
   .logo {
     font-size: 24px;
