--- a/src/components/Navigations/HamburgerMenu/style.module.scss
+++ b/src/components/Navigations/HamburgerMenu/style.module.scss
@@ -7,42 +7,47 @@
   height: 100vh;
 
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   background-color: var(--color-grayDark);
-  opacity: 0.5;
+  opacity: 0.95;
 
-  .logo {
-    font-size: 24px;
-    margin-left: 24px;
-  }
-
-  .menuPc {
+  .menuList {
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
     gap: 24px;
-    margin-right: 24px;
+    margin-top: 24px;
 
     .menuItem {
+      width: 100%;
+      padding-bottom: 24px;
+      border-bottom: 1px solid var(--color-white);
       color: var(--color-white);
+      font-size: 24px;
       font-weight: bold;
       text-decoration: none;
       cursor: pointer;
-
-      &:hover {
-        color: var(--color-primary);
-      }
-    }
-
-    @media screen and (max-width: 768px) {
-      display: none;
     }
   }
 
-  .menuSp {
-    margin-right: 24px;
+  .close {
+    background-color: transparent;
+    border: none;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    outline: none;
+    appearance: none;
+    color: inherit;
+    text-align: inherit;
+    text-decoration: inherit;
+    text-transform: inherit;
+    -webkit-appearance: none;
 
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
+    margin-top: 24px;
   }
 }
