feat: news list

--- a/src/components/Containers/NewsContainer/style.module.scss
+++ b/src/components/Containers/NewsContainer/style.module.scss
@@ -1,4 +1,4 @@
-.contactContainer {
+.newsContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -6,4 +6,12 @@
   align-items: center;
 
   gap: 40px;
+
+  .newsList {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 24px;
+  }
 }
