--- a/src/components/Containers/NewsContainer/style.module.scss
+++ b/src/components/Containers/NewsContainer/style.module.scss
@@ -2,16 +2,16 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   gap: 40px;
 
   .newsList {
     display: flex;
-    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 24px;
+    flex-wrap: wrap;
+    gap: 48px;
   }
 }
