--- a/src/components/Containers/ArticleContainer/style.module.scss
+++ b/src/components/Containers/ArticleContainer/style.module.scss
@@ -4,11 +4,41 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 32px;
 
-  gap: 40px;
+  gap: 16px;
 
   .headerImage {
-    width: 100%;
-    height: auto;
+    max-height: 400px;
+    width: auto;
+    max-width: 100%;
+    height: 100%;
+  }
+
+  .texts {
+    padding: 0 16px;
+
+    h2 {
+      font-size: 20px;
+      line-height: 1.8;
+    }
+
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 1.6;
+      margin-top: 24px;
+    }
+
+    p {
+      font-size: 15px;
+      line-height: 1.4;
+      margin-top: 12px;
+    }
+
+    .publishedAt {
+      font-size: 13px;
+      line-height: 1.4;
+    }
   }
 }
