feat: container padding

--- a/src/components/Containers/AboutContainer/style.module.scss
+++ b/src/components/Containers/AboutContainer/style.module.scss
@@ -7,6 +7,13 @@
 
   gap: 40px;
 
+  .logo {
+    max-width: 768px;
+    width: 100%;
+    height: auto;
+    margin-bottom: 24px;
+  }
+
   .aboutContent {
     width: 100%;
     display: flex;
@@ -14,6 +21,7 @@
     justify-content: flex-start;
     align-items: center;
     max-width: 768px;
+    padding-inline: 16px;
 
     gap: 48px;
 
@@ -23,13 +31,6 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-
-      .logo {
-        max-width: 768px;
-        width: 100%;
-        height: auto;
-        margin-bottom: 24px;
-      }
 
       .paragraph {
         font-size: 15px;
