--- a/src/components/Cards/ArticleCard/style.module.scss
+++ b/src/components/Cards/ArticleCard/style.module.scss
@@ -5,7 +5,11 @@
   align-items: flex-start;
   gap: 8px;
   color: var(--color-white);
-  width: 300px;
+  width: 280px;
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 
   .headerImage {
     line-height: 0;
