--- a/src/components/Containers/NewsContainer/style.module.scss
+++ b/src/components/Containers/NewsContainer/style.module.scss
@@ -4,12 +4,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-inline: 16px;
 
   gap: 40px;
 
   .newsList {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 48px;
