--- a/src/components/Layouts/DefaultLayout/style.module.scss
+++ b/src/components/Layouts/DefaultLayout/style.module.scss
@@ -9,7 +9,7 @@
   color: var(--color-white);
 
   .container {
-    margin: 70px 0 160px;
+    margin: 0 0 160px;
     padding: 40px 0;
     min-height: calc(100vh - 70px);
     width: 100%;
